[tool.poetry]
name = "DoeDeer_brain_games"
version = "0.3.0"
description = "brain games, study package"
authors = ["Doe_Deer <gregorylos97@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
